# bens_number_theory

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: constants.rs  docs-header.html  factorial.rs  factorials.rs  lib.rs  macros.rs  main.rs  perfect_numbers.rs  primes.rs  sequences.rs
tests/: factorial_tests.rs  factorials_tests.rs  general_tests.rs  is_prime_test.rs  is_prime_tests.rs  perfect_number_tests.rs  prime_number_tests.rs  primes_tests.rs
