[package]
name = "bens_number_theory"
version = "0.6.0"
edition = "2021"
authors = ["Ben10164"]
description = "A sample Rust project for number theory stuff (I'm using this to learn Rust)"
license = "Apache-2.0"
repository = "https://github.com/Ben10164/bens_number_theory"
keywords = ["testing", "beginner", "number-theory"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html", "--document-private-items" ]

[dependencies]
num = "0.4.2"
